[gd_scene load_steps=15 format=3 uid="uid://b3ojlfdmeob88"]

[ext_resource type="Script" path="res://UIPopup/UIPopupController.gd" id="1_arvkw"]
[ext_resource type="Theme" uid="uid://bq5xapy267tbu" path="res://Theme/DefaultTheme.tres" id="1_nq11p"]
[ext_resource type="PackedScene" uid="uid://c3eeoi32s1nty" path="res://AI/AIRequest.tscn" id="2_g7347"]
[ext_resource type="Texture2D" uid="uid://dls5a0ebweake" path="res://Theme/Assets/GUI.png" id="3_dhwbl"]
[ext_resource type="FontFile" uid="uid://chtow6hpubb51" path="res://Theme/Assets/Pixelme.ttf" id="5_5ijhh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_soapr"]
texture = ExtResource("3_dhwbl")
expand_margin_left = 50.0
expand_margin_top = 160.0
expand_margin_right = 50.0
expand_margin_bottom = 160.0
region_rect = Rect2(0, 95.6202, 45, 32.3798)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1o8rc"]
bg_color = Color(0.580392, 0.439216, 0.447059, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.329412, 0.258824, 0.368627, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 1
expand_margin_left = 25.0
expand_margin_top = 15.0
expand_margin_right = 25.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pb126"]
texture = ExtResource("3_dhwbl")
region_rect = Rect2(79, 256, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vrl61"]
texture = ExtResource("3_dhwbl")
region_rect = Rect2(95, 257, 14, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wh1lp"]
texture = ExtResource("3_dhwbl")
region_rect = Rect2(80, 274, 13, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3kpxp"]
texture = ExtResource("3_dhwbl")
region_rect = Rect2(63, 240, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sp8g1"]
texture = ExtResource("3_dhwbl")
region_rect = Rect2(79, 209, 14, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hgpa3"]
texture = ExtResource("3_dhwbl")
region_rect = Rect2(63, 210, 14, 12)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vx0i3"]
texture = ExtResource("3_dhwbl")
expand_margin_left = 60.0
expand_margin_top = 60.0
expand_margin_right = 60.0
expand_margin_bottom = 60.0
region_rect = Rect2(0, 33, 44, 44)

[node name="CanvasLayer" type="CanvasLayer"]

[node name="UIPopup" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nq11p")
script = ExtResource("1_arvkw")

[node name="Panel" type="Panel" parent="UIPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -84.0
offset_right = 526.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nq11p")
theme_override_styles/panel = SubResource("StyleBoxTexture_soapr")

[node name="User_Name" type="RichTextLabel" parent="UIPopup/Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 292.5
offset_right = 175.0
offset_bottom = 349.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="User_TextBox" type="LineEdit" parent="UIPopup/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = 184.0
offset_right = 235.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nq11p")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_1o8rc")

[node name="AI_Name" type="RichTextLabel" parent="UIPopup/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -163.0
offset_right = 499.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.329412, 0.258824, 0.368627, 1)
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "  temp"
tab_size = 10

[node name="AI_Pic" type="TextureRect" parent="UIPopup/Panel/AI_Name"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.028
anchor_top = -0.103
anchor_right = -0.028
anchor_bottom = -0.103
offset_left = -30.756
offset_top = -0.0389996
offset_right = 16.244
offset_bottom = 42.961
grow_horizontal = 0
grow_vertical = 2
expand_mode = 1

[node name="AI_TextBox" type="RichTextLabel" parent="UIPopup/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -93.0
offset_right = 243.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_separation = 5
theme_override_font_sizes/normal_font_size = 20
text = " "

[node name="AIRequest" parent="UIPopup/Panel" instance=ExtResource("2_g7347")]
unique_name_in_owner = true

[node name="submitBTN" type="Button" parent="UIPopup/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 272.0
offset_top = 181.0
offset_right = 372.0
offset_bottom = 281.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_fonts/font = ExtResource("5_5ijhh")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_pb126")
theme_override_styles/hover = SubResource("StyleBoxTexture_vrl61")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wh1lp")
text = " "

[node name="backBTN" type="Button" parent="UIPopup/Panel"]
layout_mode = 0
offset_left = -82.0
offset_top = 195.0
offset_right = 18.0
offset_bottom = 295.0
scale = Vector2(0.7, 0.7)
theme_override_styles/normal = SubResource("StyleBoxTexture_3kpxp")
theme_override_styles/hover = SubResource("StyleBoxTexture_sp8g1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hgpa3")

[node name="Panel2" type="Panel" parent="UIPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -534.0
offset_top = -191.0
offset_right = -201.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nq11p")
theme_override_styles/panel = SubResource("StyleBoxTexture_vx0i3")

[node name="RichTextLabel" type="RichTextLabel" parent="UIPopup/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -139.5
offset_right = 162.5
offset_bottom = 165.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nq11p")
theme_override_constants/line_separation = 5
theme_override_font_sizes/normal_font_size = 20
text = "Try sell your treasures! Each NPC has their own quirks and tricks to making them happy.

The NPC will offer you a {price}, you can accept the deal or barter for a higher offer.

Press  \"<3\" to reply  or \"<\" to end conversation."
fit_content = true

[connection signal="text_submitted" from="UIPopup/Panel/User_TextBox" to="UIPopup" method="_on_user_text_box_text_submitted"]
[connection signal="button_down" from="UIPopup/Panel/submitBTN" to="UIPopup" method="_on_submit_btn_button_down"]
[connection signal="button_down" from="UIPopup/Panel/backBTN" to="UIPopup" method="_on_back_btn_button_down"]
